@@ -25,6 +25,7 @@ This version has not been released yet.
  * Added utc_id UUID algorithm.
  * encode database name during URL rewriting.
  * Include user name in show/list ETags.
+ * server-wide UUID in some replication ids.
 
 Version 1.2.1
 -------------
